--- a/NajczesciejzadawanepytaniaFAQ.html
+++ b/NajczesciejzadawanepytaniaFAQ.html
@@ -46,14 +46,19 @@
   <!-- Hnd styles -->
   <link href="css/layout.min.css" rel="stylesheet" />
   <link href="css/effects.min.css" rel="stylesheet" />
-  <link href="css/theme-light-blue.min.css" rel="stylesheet" />
+  <link href="css/theme-dark-blue.min.css" rel="stylesheet" />
   <link href="css/print.min.css" rel="stylesheet" media="print" />
   <style type="text/css">nav { width: 350px} @media screen and (min-width:769px) { body.md-nav-expanded div#main { margin-left: 350px} body.md-nav-expanded header { padding-left: 364px} }</style>
 
   <!-- Content style -->
   <link href="css/hnd.content.css" rel="stylesheet" />
 
-  
+  <style type="text/css">body {background-color: #333333;}
+h1 {color: white;}
+h2 {color: white;}
+p {color: white;}
+li {color: white;}
+a:link { color: #0076C5}</style>
 
 
 
@@ -186,7 +191,7 @@
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Najczęściej zadawane pytania</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego przy próbie otwarcia programu pisze, że brakuje pliku dll?</span></li>
+<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego przy próbie otwarcia programu pisze, że brakuje pliku dll?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">W przypadku Windowsa 7 w Direct X brakuje części plików, wystarczy użyć </span><a class="rvts18" href="https://www.microsoft.com/en-us/download/details.aspx?id=35&44F86079-8679-400C-BFF2-9CA5F2BCBDFC=1">instalatora sieciowego.</a></li>
@@ -195,14 +200,14 @@
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otworzeniu Kainote dostaję informację, że nie udało się wczytać hotkeysów i program zostanie zamknięty?</span></li>
+<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otworzeniu Kainote dostaję informację, że nie udało się wczytać hotkeysów i program zostanie zamknięty?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Przyczyny mogą być dwie, od poprzedniej wersji zmieniły się użyte hotkeysy i wystarczy tylko usunąć plik Hotkeys.txt i AudioHotkeys.txt. Bądź też mamy ustawiony język japoński, po wyłączeniu wszystko powinno działać.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otworzeniu wideo mam zieloną / różową plamę?</span></li>
+<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otworzeniu wideo mam zieloną / różową plamę?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Przyczyną są kodeki Microsoftu, wystarczy je zmienić, instalując inne, najlepiej K-lite bądź gdy już jakieś mamy zainstalować </span><a class="rvts18" href="http://www.programosy.pl/program,preferred-filter-tweaker.html" target="_blank">Win7DSFilterTweaker</a><span class="rvts6"> i wybrać dla h264 inny codec niż Microsoftu.</span></li>
@@ -210,14 +215,14 @@
 </ul>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Jak zmienić wielkość wideo?</span></li>
+<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Jak zmienić wielkość wideo?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Wystarczy najechać myszą między okno wideo a pole napisów i przeciągnąć, bądź kliknąć w wideo i użyć rolki myszy.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/4.bmp')" class="rvps6"><span class="rvts17">Dlaczego w programie nie ma tego czy tamtego?</span><span class="rvts6"> </span></li>
+<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego w programie nie ma tego czy tamtego?</span><span class="rvts6"> </span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Jeszcze nikt nie zgłosił mi, że coś takiego chce, możesz być pierwszy.</span></li>
