--- a/Wymagania.html
+++ b/Wymagania.html
@@ -46,14 +46,19 @@
   <!-- Hnd styles -->
   <link href="css/layout.min.css" rel="stylesheet" />
   <link href="css/effects.min.css" rel="stylesheet" />
-  <link href="css/theme-light-blue.min.css" rel="stylesheet" />
+  <link href="css/theme-dark-blue.min.css" rel="stylesheet" />
   <link href="css/print.min.css" rel="stylesheet" media="print" />
   <style type="text/css">nav { width: 350px} @media screen and (min-width:769px) { body.md-nav-expanded div#main { margin-left: 350px} body.md-nav-expanded header { padding-left: 364px} }</style>
 
   <!-- Content style -->
   <link href="css/hnd.content.css" rel="stylesheet" />
 
-  
+  <style type="text/css">body {background-color: #333333;}
+h1 {color: white;}
+h2 {color: white;}
+p {color: white;}
+li {color: white;}
+a:link { color: #0076C5}</style>
 
 
 
@@ -186,11 +191,9 @@
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Wymagania Kainote</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/3.bmp')" class="rvps6"><span class="rvts6">Podstawowym wymaganiem jest </span><span class="rvts17">Windows XP</span><span class="rvts6"> bądź wyższy. </span></li>
-<li style="list-style-image: url('lib/3.bmp')" class="rvps6"><span class="rvts6">Wideo potrzebuje </span><span class="rvts17">aktualizacji directX 9</span><span class="rvts6"> w przypadku Windowsa Vista i 7, które mają niepełną instalację DirectX.</span><br/><span class="rvts6">Na to też już zaradziłem, dodałem plik D3DX9_43.dll, do obu wersji programu.</span></li>
-<li style="list-style-image: url('lib/3.bmp')" class="rvps6"><span class="rvts6">Program także wymaga Redista 2013, ale na to już zaradziłem, dodając potrzebne pliki do folderu programu.</span></li>
-<li style="list-style-image: url('lib/3.bmp')" class="rvps6"><span class="rvts6">Dependency control wymaga Redista 2013 i 15, co objawiać się będzie pustymi błędami przy inicjalizacji skryptów które wykorzystują jego dlle.</span></li>
-<li style="list-style-image: url('lib/3.bmp')" class="rvps6"><span class="rvts6">Samo wideo przez FFMS2 i osobno wczytane audio nie ma tak dużych wymagań jak w przypadku starszych wersji Aegisuba.</span></li>
+<li style="list-style-image: url('lib/11.bmp')" class="rvps6"><span class="rvts6">Podstawowym wymaganiem jest </span><span class="rvts17">Windows Vista</span><span class="rvts6"> bądź nowszy. </span></li>
+<li style="list-style-image: url('lib/11.bmp')" class="rvps6"><span class="rvts6">Dependency control wymaga Redista 2013 i 15, co objawiać się będzie pustymi błędami przy inicjalizacji skryptów które wykorzystują jego dlle.</span></li>
+<li style="list-style-image: url('lib/11.bmp')" class="rvps6"><span class="rvts6">Samo wideo przez FFMS2 i osobno wczytane audio nie ma tak dużych wymagań jak w przypadku starszych wersji Aegisuba.</span></li>
 </ul>
 <p></p>
 <p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Easily create iPhone documentation</a></p>
