--- a/Edycjanapisow.html
+++ b/Edycjanapisow.html
@@ -13,7 +13,7 @@
 
   <title>Edycja napis&oacute;w</title>
   <meta name="description" content="" /> 
-  <meta name="keywords" content="Pole napis&oacute;w,Grid,Pole edycji linii,EditBox,Obsługiwane formaty,Menu pola napis&oacute;w,FFMS2,Przeł">
+  <meta name="keywords" content="Pole napis&oacute;w,Grid,Pole edycji linii,EditBox,Obsługiwane formaty,Menu pola napis&oacute;w,FFMS2,Pole audio">
 
 
 
@@ -46,14 +46,19 @@
   <!-- Hnd styles -->
   <link href="css/layout.min.css" rel="stylesheet" />
   <link href="css/effects.min.css" rel="stylesheet" />
-  <link href="css/theme-light-blue.min.css" rel="stylesheet" />
+  <link href="css/theme-dark-blue.min.css" rel="stylesheet" />
   <link href="css/print.min.css" rel="stylesheet" media="print" />
   <style type="text/css">nav { width: 350px} @media screen and (min-width:769px) { body.md-nav-expanded div#main { margin-left: 350px} body.md-nav-expanded header { padding-left: 364px} }</style>
 
   <!-- Content style -->
   <link href="css/hnd.content.css" rel="stylesheet" />
 
-  
+  <style type="text/css">body {background-color: #333333;}
+h1 {color: white;}
+h2 {color: white;}
+p {color: white;}
+li {color: white;}
+a:link { color: #0076C5}</style>
 
 
 
@@ -210,9 +215,9 @@
 <p class="rvps6"><span class="rvts6">Tag wstawiamy z ukośnikiem i bez nawiasów klamrowych. Po zapisaniu tagu naciśnięcie na przycisk wstawia tag wg wybranych opcji. Można nawet wstawiać ten sam tag we wiele linii jednocześnie.</span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="12" class="rvps6"><span class="rvts6">Opcje przycisków wstawiania tagów, gdy nie mamy żadnych przycisków, to po kliknięciu możemy wybrać ile przycisków ma się pojawić, a także skonfigurować każdy z nich.</span></li>
-<li value="13" class="rvps6"><a name="CPS"></a>
-<span class="rvts6">Licznik ilości linii i ilości znaków w linii, zmienia kolor na czerwono, gdy jest więcej niż dwie linie, bądź jest więcej niż 43 znaki w którejś z nich.</span></li>
-<li value="14" class="rvps6"><span class="rvts6">Znaki na sekundę czyli ile znaków trzeba przeczytać w jedną sekundę. Zmienia kolor na czerwony gdy ilość znaków na sekundę jest większe od 15.</span></li>
+<li value="13" class="rvps6"><span class="rvts6">Licznik ilości linii i ilości znaków w linii, zmienia kolor na czerwono, gdy jest więcej niż dwie linie, bądź jest więcej niż 43 znaki w którejś z nich.</span></li>
+<li value="14" class="rvps6"><a name="CPS"></a>
+<span class="rvts6">Znaki na sekundę czyli ile znaków trzeba przeczytać w jedną sekundę. Zmienia kolor na czerwony gdy ilość znaków na sekundę jest większe od 15.</span></li>
 <li value="15" class="rvps6"><span class="rvts6">Włącza / wyłącza tryb tłumaczenia (opcja aktywna tylko przy wczytanych napisach w formacie ASS).</span></li>
 <li value="16" class="rvps6"><span class="rvts6">Przełącznik z czasów na klatki i odwrotnie.</span></li>
 <li value="17" class="rvps6"><span class="rvts6">Pole edycji tekstu.</span></li>
