--- a/Edycjastylow.html
+++ b/Edycjastylow.html
@@ -46,14 +46,19 @@
   <!-- Hnd styles -->
   <link href="css/layout.min.css" rel="stylesheet" />
   <link href="css/effects.min.css" rel="stylesheet" />
-  <link href="css/theme-light-blue.min.css" rel="stylesheet" />
+  <link href="css/theme-dark-blue.min.css" rel="stylesheet" />
   <link href="css/print.min.css" rel="stylesheet" media="print" />
   <style type="text/css">nav { width: 350px} @media screen and (min-width:769px) { body.md-nav-expanded div#main { margin-left: 350px} body.md-nav-expanded header { padding-left: 364px} }</style>
 
   <!-- Content style -->
   <link href="css/hnd.content.css" rel="stylesheet" />
 
-  
+  <style type="text/css">body {background-color: #333333;}
+h1 {color: white;}
+h2 {color: white;}
+p {color: white;}
+li {color: white;}
+a:link { color: #0076C5}</style>
 
 
 
@@ -183,7 +188,7 @@
             <div class="main-content">
                 
 <p></p>
-<h1 class="rvps4"><span class="rvts0"><span class="rvts15">Tagi ASS</span></span></h1>
+<h1 class="rvps4"><span class="rvts0"><span class="rvts15">Edycja stylów</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Edycję stylów połączyłem z oknem menedżera i odblokowałem działanie programu, gdy menedżer jest włączony, dodając przy tym dodatkowe możliwości.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
