--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
   <!-- Hnd styles -->
   <link href="css/layout.min.css" rel="stylesheet" />
   <link href="css/effects.min.css" rel="stylesheet" />
-  <link href="css/theme-light-blue.min.css" rel="stylesheet" />
+  <link href="css/theme-dark-blue.min.css" rel="stylesheet" />
   <link href="css/print.min.css" rel="stylesheet" media="print" />
   <style type="text/css">nav { width: 350px} @media screen and (min-width:769px) { body.md-nav-expanded div#main { margin-left: 350px} body.md-nav-expanded header { padding-left: 364px} }</style>
 
   <!-- Content style -->
   <link href="css/hnd.content.css" rel="stylesheet" />
 
-  
+  <style type="text/css">body {background-color: #333333;}
+h1 {color: white;}
+h2 {color: white;}
+p {color: white;}
+li {color: white;}
+a:link { color: #0076C5}</style>
 
 
 
@@ -126,7 +131,7 @@
             
             data-openlvl="1"
         >
-            <ul><li><a href="Edycjanapisow.html" data-related='[]'>EditBox</a></li><li><a href="Pracazwideo.html" data-related='[{"title":"Praca z wideo","url":"Pracazwideo.html"},{"title":"Edycja napisów","url":"Edycjanapisow.html"}]'>FFMS2</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Grid</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Menu pola napisów</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Obsługiwane formaty</a></li><li><a href="Pracazaudio.html" data-related='[]'>Pole audio</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole edycji linii</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole napisów</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Przeł</a></li></ul>
+            <ul><li><a href="Przenoszenietekstujednychnapisow.html" data-related='[]'>cadobre</a></li><li><a href="Edycjanapisow.html" data-related='[]'>EditBox</a></li><li><a href="Pracazwideo.html" data-related='[{"title":"Praca z wideo","url":"Pracazwideo.html"},{"title":"Edycja napisów","url":"Edycjanapisow.html"}]'>FFMS2</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Grid</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Menu pola napisów</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Obsługiwane formaty</a></li><li><a href="Pracazaudio.html" data-related='[{"title":"Praca z audio","url":"Pracazaudio.html"},{"title":"Edycja napisów","url":"Edycjanapisow.html"}]'>Pole audio</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole edycji linii</a></li><li><a href="Edycjanapisow.html" data-related='[]'>Pole napisów</a></li><li><a href="#" data-related='[]'>Przeł</a></li><li><a href="Conowego.html" data-related='[]'>s</a></li><li><a href="Conowego.html" data-related='[]'>wy</a></li></ul>
         </div>
       </div>  <!-- /index-->
       
